--- a/HottaPiz/Pages/Index.cshtml
+++ b/HottaPiz/Pages/Index.cshtml
@@ -1,10 +1,33 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Pizza's";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container text-center text-white">
+    <div class="bg-secondary">
+        <div class="row p-5"> 
+            <div class="col-6">
+                <img src="/images/pizza-three.png" class="w-75" alt="Create Your Own Pizza" />
+            </div>
+            <div class="col-6 p-5">
+                <h4 class="mt-5">Create Your Own Pizza !</h4>
+                <a class="btn btn-primary rounded-pill btn-lg" asp-area="" asp-page="">Let's Start !</a>
+            </div>
+        </div>
+    </div>
+    <br/>
+    <div class="bg-secondary">
+        <div class="row p-5">
+            <h2 class="mt-3"><b>Pizza's Menu</b></h2>
+            <hr/>
+            @foreach (var pizza in Model.Pizzas)
+            {
+                <div class="col-4 my-5">
+                    <img src="/images/@pizza.PizzaImageName" alt="@pizza.PizzaName" class="w-100"/>
+                    <h4 class="my-4"><b>@pizza.PizzaName</b></h4>
+                    <a class="btn rounded-pill btn-primary">Add To Order</a>
+                </div>
+            }
+        </div>
+    </div>
 </div>
