--- a/HottaPiz/Pages/Shared/_Layout.cshtml
+++ b/HottaPiz/Pages/Shared/_Layout.cshtml
@@ -20,18 +20,15 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Pizzas">Pizza's</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Pizza's</a>
                         </li>
                         @if (!User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark text-end" asp-area="" asp-page="/Login">Login</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Login">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark text-end" asp-area="" asp-page="/Register">Register</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Register">Register</a>
                             </li>
                         }
                         else
