Completed login and log out customer

--- a/HottaPiz/Pages/Customer/LoginCustomer.cshtml
+++ b/HottaPiz/Pages/Customer/LoginCustomer.cshtml
@@ -1,9 +1,8 @@
 ﻿@page "/Login"
-@model HottaPiz.Web.Pages.LoginCustomerModel
+@model HottaPiz.Web.Pages.Customer.LoginCustomerModel
 @{
     ViewData["Title"] = "Login";
 }
-
 
 <div class="container">
     <div>
