--- a/HottaPiz/Pages/Customer/RegisterCustomer.cshtml
+++ b/HottaPiz/Pages/Customer/RegisterCustomer.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/Register"
-@model HottaPiz.Web.Pages.RegisterCustomerModel
+@model HottaPiz.Web.Pages.Customer.RegisterCustomerModel
 @{
     ViewData["Title"] = "Register";
 }
