--- a/HottaPiz/Pages/Shared/_Layout.cshtml
+++ b/HottaPiz/Pages/Shared/_Layout.cshtml
@@ -34,10 +34,10 @@
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark text-end" asp-area="" asp-page="/Logout">Logout</a>
+                                <a class="nav-link text-dark text-end" href="/Logout">Logout</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark text-end" asp-area="" asp-page="/MyOrders">My Orders</a>
+                                <a class="nav-link text-dark text-end" href="/MyOrders">My Orders</a>
                             </li>
                         }
                     </ul>
