--- a/HottaPiz/Pages/Index.cshtml
+++ b/HottaPiz/Pages/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
 @using HottaPiz.Infrastructure.Utilities.PathTools
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model IndexModel
+@using System.Security.Claims
+@model HottaPiz.Web.Pages.IndexModel
 @{
     ViewData["Title"] = "Pizza's";
 }
@@ -28,6 +29,10 @@
                     <img src="@PathGenerator.GetPizzaImageAddress(pizza.PizzaImageName)" alt="@pizza.PizzaName" class="w-100"/>
                     <h4 class="my-4"><b>@pizza.PizzaName</b></h4>
                     <a class="btn rounded-pill btn-primary">Add To Order</a>
+                    @if(User.Identity.IsAuthenticated && bool.Parse(User.FindFirstValue("IsAdmin")))
+                    {
+                    <a class="btn rounded-pill btn-success" href="/Pizza/Update/@pizza.Id">Update Pizza</a>
+                    }
                 </div>
             }
         </div>
