--- a/HottaPiz/Pages/Shared/_Layout.cshtml
+++ b/HottaPiz/Pages/Shared/_Layout.cshtml
@@ -39,10 +39,17 @@
                                 <a class="nav-link text-dark text-end" href="/Logout">Logout</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark text-end" href="/MyOrders">My Orders</a>
+                                <a class="nav-link text-dark text-end" href="/MyOrders">My Order's</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark text-end" href="/MyPizzas">My Pizza's</a>
                             </li>
                         }
                     </ul>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <a class="btn btn-primary rounded-pill me-3">Order Basket</a>
+                    }
                     @if(User.Identity.IsAuthenticated && bool.Parse(User.FindFirstValue("IsAdmin")))
                     {
                         <a class="btn rounded-pill btn-success" href="/Pizza/Create">Create New Pizza</a>
