--- a/HottaPiz/Pages/Index.cshtml
+++ b/HottaPiz/Pages/Index.cshtml
@@ -29,7 +29,7 @@
                     <img src="@PathGenerator.GetPizzaImageAddress(pizza.PizzaImageName)" alt="@pizza.PizzaName" class="w-100"/>
                     <h4 class="my-4"><b>@pizza.PizzaName</b></h4>
                     <h5 class="my-4"><b>@pizza.PizzaTotalPrice $</b></h5>
-                    <a class="btn rounded-pill btn-primary">Add To Order</a>
+                    <a class="btn rounded-pill btn-primary" href="/AddToOrderBasket?PizzaId=@pizza.Id">Add To Order</a>
                     @if(User.Identity.IsAuthenticated && bool.Parse(User.FindFirstValue("IsAdmin")))
                     {
                     <a class="btn rounded-pill btn-success" href="/Pizza/Update/@pizza.Id">Update Pizza</a>
