Implementing Removing Item From Order Basket

--- a/HottaPiz/Pages/Index.cshtml
+++ b/HottaPiz/Pages/Index.cshtml
@@ -14,7 +14,7 @@
             </div>
             <div class="col-6 p-5">
                 <h4 class="mt-5">Create Your Own Pizza !</h4>
-                <a class="btn btn-primary rounded-pill btn-lg" href="/CreateCustom">Let's Start !</a>
+                <a class="btn btn-primary rounded-pill btn-lg" href="/PizzaCreator">Let's Start !</a>
             </div>
         </div>
     </div>
