--- a/HottaPiz/Pages/Order/OrderBasket.cshtml
+++ b/HottaPiz/Pages/Order/OrderBasket.cshtml
@@ -33,7 +33,7 @@
                         @item.PizzaPrice $
                     </td>
                     <td>
-                        <a class="btn btn-danger">X</a>
+                        <a class="btn btn-danger" href="/RemoveFromOrderBasket?PizzaId=@item.PizzaId">X</a>
                     </td>
                 </tr>
             }
