--- a/HottaPiz/Pages/Pizza/CustomPizza.cshtml
+++ b/HottaPiz/Pages/Pizza/CustomPizza.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="container text-white">
-    <a class="btn btn-outline-secondary mb-2">Back To Menu</a>
+    <a class="btn btn-outline-secondary mb-2" href="/">Back To Menu</a>
     <div class="bg-secondary p-3">
         <div class="row">
             <div class="col-5 ms-5">
