Implementing Finilizing The Order

--- a/HottaPiz/Pages/Order/OrderBasket.cshtml
+++ b/HottaPiz/Pages/Order/OrderBasket.cshtml
@@ -44,7 +44,7 @@
         <div class="text-end">
             <span class="text-start">Total Invoice Price:</span>
             <span><b>@Model.OrderTotalPrice $</b></span><br/>
-            <a class="btn btn-primary rounded-pill mt-3">Proceed -></a>
+            <a class="btn btn-primary rounded-pill mt-3" href="/ThankYou">Proceed -></a>
         </div>
 
     }
