Implementing the Customer Orders

--- a/HottaPiz/Pages/Customer/CustomerPizzas.cshtml
+++ b/HottaPiz/Pages/Customer/CustomerPizzas.cshtml
@@ -26,7 +26,7 @@
                             }
                             <span>Pizza Bread</span>
                             <h4><b>@pizza.PizzaPrice $</b></h4>
-                            <a class="btn btn-primary rounded-pill mb-3">Order</a>
+                            <a class="btn btn-primary rounded-pill mb-3" href="/AddToOrderBasket?PizzaId=@pizza.PizzaId">Order</a>
                         </div>
                     </div>
                 </div>
