Implementing Update Customer Details

--- a/HottaPiz/Pages/Admin/Customer/ManageCustomersIndex.cshtml
+++ b/HottaPiz/Pages/Admin/Customer/ManageCustomersIndex.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/Admin/ManageCustomers"
-@model HottaPiz.Web.Pages.Admin.ManageCustomersIndexModel
+@model HottaPiz.Web.Pages.Admin.Customer.ManageCustomersIndexModel
 @{
     ViewData["Title"] = "Manage Customers";
 }
