--- a/HottaPiz/Pages/Pizza/UpdatePizza.cshtml
+++ b/HottaPiz/Pages/Pizza/UpdatePizza.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/Pizza/Update/{id}"
+﻿@page "/Admin/Pizza/Update/{id}"
 @using HottaPiz.Infrastructure.Utilities.PathTools
 @model HottaPiz.Web.Pages.Pizza.UpdatePizzaModel
 @{
