--- a/HottaPiz/Pages/Index.cshtml
+++ b/HottaPiz/Pages/Index.cshtml
@@ -34,8 +34,8 @@
                     <a class="btn rounded-pill btn-primary" href="/AddToOrderBasket?PizzaId=@pizza.Id">Add To Order</a>
                     @if (User.Identity.IsAuthenticated && bool.Parse(User.FindFirstValue("IsAdmin")))
                     {
-                        <a class="btn rounded-pill btn-success" href="/Pizza/Update/@pizza.Id">Update Pizza</a>
-                        <a class="btn rounded-pill btn-danger" href="/Pizza/Remove/@pizza.Id">Remove Pizza</a>
+                        <a class="btn rounded-pill btn-success" href="/Admin/Pizza/Update/@pizza.Id">Update Pizza</a>
+                        <a class="btn rounded-pill btn-danger" href="/Admin/Pizza/Remove/@pizza.Id">Remove Pizza</a>
                     }
                 </div>
             }
